<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Carbon Footprint Tracker</string>
    <string name="get_started">Get Started</string>
    <string name="radiobutton1">Travel</string>
    <string name="radiobutton2">Food</string>
    <string name="radiobutton3">Shop</string>
    <string name="radiobutton4">Action</string>
    <string name="footprint_type">Footprint Type</string>
    <string name="record_emission">Record Emission</string>
    <string name="carbon_recorder">Carbon Recorder</string>
    <string name="food">Food</string>
    <string name="shop">Shop</string>
    <string name="travel">Travel</string>
    <string name="action">Action</string>
    <string name="carbon_footprint_tracker">Carbon Footprint Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="setting_name">sample@sample.com</string>
    <string name="setting_password">**********</string>
    <string name="action_set_in">create your account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_long">register</string>
    <string name="welcome2">Login to your account</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_failed">Forgot your password?</string>
    <string name="login_lead">Already a member?login</string>
    <string name="photo">photo</string>
</resources>